<resources>
    <string name="app_name">NetTakip</string>

    <string name="tyt_format" translatable="false">%1$s tyt</string>
    <string name="ayt_format" translatable="false">%1$s ayt</string>

    <string name="goal_summary_format">Hedefe ulaşmanıza %.1f %s kaldı</string>

    <string name="tyt" translatable="false">tyt</string>
    <string name="ayt" translatable="false">ayt</string>

    <string name="select_date">Tarih seç</string>
    <string name="prev_day">Öncesi</string>
    <string name="next_day">Sonrası</string>
    <string name="input_net">Net gir</string>
    <string name="input_note">Not gir</string>
    <string name="select_emoji">Emoji seç</string>
    <string name="save">Kaydet</string>
    <string name="delete">Sil</string>

    <string name="title_splash">Splash</string>
    <string name="title_on_boarding">On Boarding</string>
    <string name="title_home">Net</string>
    <string name="title_settings">Ayarlar</string>
    <string name="title_history">Tarih</string>
    <string name="title_add_net">Net Ekle</string>
    <string name="title_emoji">Emoji</string>

    <string name="select_emoji_with_emoji_format">%1$s Select emoji</string>
    <string name="update">Güncelle</string>
    <string name="alert_blank_net">Lütfen netinizi girdiğinizden emin olun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="history">Tarih</string>

    <string name="title_no_net">Sağ üstteki artı düğmesinden net ekleyin</string>
    <string name="your_progress">İlerlemen</string>
    <string name="line_chart">Line</string>
    <string name="bar_chart">Bar</string>
    <string name="summary">Özet</string>
    <string name="see_all"><u>Hepsini Gör</u></string>

    <string name="title_min_net">Minimum</string>
    <string name="title_max_net">Maksimum</string>
    <string name="title_average_net">Ortalama</string>
    <string name="goal_net">Hedef Net</string>
    <string name="start">Başlangıç</string>
    <string name="goal">Hedef</string>
    <string name="current">Şu an</string>

    <string name="add_net">Net Ekle</string>
    <string name="settings">Ayarlar</string>

    <string name="alert_current_net_must_different_with_goal_net">Mevcut netiniz hedef netinizden farklı olmalıdır 🥳 </string>
    <string name="alert_net_bigger_than_zero">Netiniz sıfırdan büyük olmalı 🥳 </string>

    <string name="enter_current_net">Mevcut netinizi girin</string>
    <string name="enter_goal_net">Hedefi/istenen neti girin</string>

    <string name="welcome_to_nettakip">Net Takip uygulamasına hoş geldiniz</string>
    <string name="welcome_description">Selam 🥳 Başlamak için lütfen bilgilerinizi doldurun 🚀</string>

    <string name="_continue">Devam Et</string>


</resources>